<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/revealLay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/tra_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:background="@drawable/ripple_white"
                    android:onClick="addPhoto"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_add_photo"
                        android:padding="5dp" />

                    <TextView
                        style="@style/account_medium_txt_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add a Photo" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:background="@drawable/ripple_white"
                    android:onClick="addReview"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_add_review"
                        android:padding="5dp" />

                    <TextView
                        style="@style/account_medium_txt_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Add a Review" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:src="@color/gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:clickable="true"
                    android:background="@drawable/ripple_white"
                    android:onClick="createCollection"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_add_collection"
                        android:padding="5dp" />

                    <TextView
                        style="@style/account_medium_txt_style"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Create a Collection" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/bottom_menu_home"
            style="@style/BottomBarLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.androcid.zomato.view.custom.TintableImageView
                    style="@style/BottomBarImageStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_home" />

                <TextView
                    style="@style/BottomBarTxtStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bottom_home" />

            </LinearLayout>

            <ImageView
                style="@style/BottomBarSelectorStyle"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_menu_collection"
            style="@style/BottomBarLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.androcid.zomato.view.custom.TintableImageView
                    style="@style/BottomBarImageStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_collections" />

                <TextView
                    style="@style/BottomBarTxtStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bottom_collection" />

            </LinearLayout>

            <ImageView
                style="@style/BottomBarSelectorStyle"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/centerButtonLay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/bottom_bar_bg_color"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/centerButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:padding="10dp"
                android:src="@drawable/im_bottom_center_image" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_menu_feed"
            style="@style/BottomBarLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.androcid.zomato.view.custom.TintableImageView
                    style="@style/BottomBarImageStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_feed" />

                <TextView
                    style="@style/BottomBarTxtStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bottom_feed" />

            </LinearLayout>

            <ImageView
                style="@style/BottomBarSelectorStyle"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_menu_account"
            style="@style/BottomBarLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:orientation="vertical">

                <com.androcid.zomato.view.custom.TintableImageView
                    style="@style/BottomBarImageStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home_account" />

                <TextView
                    style="@style/BottomBarTxtStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_bottom_account" />

            </LinearLayout>

            <ImageView
                style="@style/BottomBarSelectorStyle"
                android:layout_width="match_parent"
                android:layout_height="5dp" />

        </LinearLayout>

    </LinearLayout>

</io.codetail.widget.RevealLinearLayout>