...
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NEARBY"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/title"
...
