...
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_layout_margin">

                    <LinearLayout
                        android:id="@+id/browseNearby"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/place_more_foreground"
                        android:clickable="true"
                        android:gravity="center_vertical"
                        android:padding="6dp">
...
