...

                <TextView
                    style="@style/SelectLocationDetectTxtStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Detect my location" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/im_select_location_54"
                    android:tint="@color/app_green" />
...
