...
            android:layout_margin="10dp"
            android:background="@drawable/tra_white_border"
            android:clickable="true"
            android:onClick="skipClick"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="SKIP" />

    </RelativeLayout>

</RelativeLayout>

